@@ -515,6 +515,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16613) action=protect doesn't tell when &cascade was set but cascading
   protection wasn't allowed 
 * (bug 16626) action=delete now correctly handles empty "reason" param
+* (bug 15579) clshow considers all categories !hidden
 
 === Languages updated in 1.14 ===
 
